# GitStyle-Haskell

./: CODE_OF_CONDUCT.md  LICENSE  Readme.md  gitstyle.cabal  stack.yaml
app/: Main.hs
src/GitStyle/: CommitMessage.hs  Common.hs  Error.hs  Executable.hs  Line.hs  Translation.hs  Types.hs  Validations.hs
test/: Spec.hs
test/GitStyle/Test/: Line.hs
