name:                gitstyle
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timkaechele/gitstyle-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Tim Kächele
maintainer:          mail@timkaechele.me
copyright:           2016 Tim Kächele
category:            Git
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitStyle.Common
                     , GitStyle.CommitMessage
                     , GitStyle.Line
                     , GitStyle.Validations
                     , GitStyle.Error
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
  default-language:    Haskell2010

executable gitstyle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gitstyle
  default-language:    Haskell2010

test-suite gitstyle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gitstyle
                     , HUnit
                     , text
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timkaechele/gitstyle-haskell
